--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -14,7 +14,7 @@ $gray:                  #666666; // Tertiary Palette, Gray
 
 
 // Theme Specific Colors
-$brand-primary:         #013c6f; // dark blue header/footer background
+$brand-primary:         #1E4B87; // dark blue header/footer background
 $darker-blue:           #00284a; // used for sub page header backgrounds
 $dark-gray:             #363636; // gray content section background
 $white:                 #FFFFFF;
