--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -4,6 +4,13 @@
 // Styles for 0up
 .home {
     &.page-parent {
+        .content-wrapper {
+            margin-left: auto;
+            margin-right: auto;
+            padding: 35px;
+            min-height: 650px;
+            background-color: $white;
+        }
         .container-fluid {
             padding: 0;
             .content {
@@ -13,20 +20,7 @@
                     width: 100%;
                     .main {
                         .home-content {
-                            min-height: 650px;
-                            background-image: url('../images/bg-optimists-takeover.png'), linear-gradient(#003d6e 100px, #1d6092 300px);
-                            background-repeat: no-repeat;
-                            background-position: top left;
-                            background-size: cover;
-                            background-attachment: fixed;
-                            background-color: $dark-blue;
                             .content-wrapper {
-                                margin-left: auto;
-                                margin-right: auto;
-                                padding: 35px;
-                                width: 1280px;
-                                min-height: 650px;
-                                background-color: $white;
                                 .col-md-8,
                                 .col-md-4 {
                                     padding: 30px;
@@ -110,8 +104,6 @@
         }
     }
     .wrap {
-        background-image: none;
-        background-color: $white;
         .main {
             padding-left: 0;
             padding-right: 0;
@@ -133,6 +125,18 @@
     }
 }
 
+.content-wrapper, .page-header h1 {
+    margin-left: auto;
+    margin-right: auto;
+}
+.content-wrapper {
+    background-color: $white;
+    overflow: hidden;
+}
+.page-header {
+    border-bottom: none;
+}
+
 // Extra Small Devices, Phones
 @media only screen and (min-width: $extra-small-container-width) {}
 
@@ -144,14 +148,34 @@
     .container {
         width: 100%;
     }
+    .content-wrapper, .page-header h1{
+        width: $medium-container-width;
+    }
+    .home {
+        &.page-parent {
+            .content-wrapper {
+                width: $medium-container-width;
+            }
+        }
+    }
 }
 
 // Large Devices, Wide Screens
 @media only screen and (min-width: $large-container-width) {
+    .home {
+        &.page-parent {
+            .content-wrapper {
+                width: $large-container-width;
+            }
+        }
+    }
     .page-child {
         .page-header {
             padding-top: 35px;
             min-height: 140px;
         }
+    }
+    .content-wrapper, .page-header h1 {
+        width: $large-container-width;
     }
 }
