--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -137,6 +137,12 @@
     border-bottom: none;
 }
 
+.faq-heading {
+    margin: 35px 0px 15px;
+    font-weight: 600;
+}
+
+
 // Extra Small Devices, Phones
 @media only screen and (min-width: $extra-small-container-width) {}
 
