--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -20,13 +20,13 @@ footer {
         }
         .phone {
             a {
-                font-family: $bold-sans-serif;
+                font-family: $sans-serif;
                 color: $white;
             }
         }
         .fax {
             span {
-                font-family: $bold-sans-serif;
+                font-family: $sans-serif;
             }
         }
         p {
