--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -28,6 +28,47 @@ $light-sans-serif: 'Proxima Nova Light', 'Helvetica Neue', Helvetia, Arial, sans
 $semibold-sans-serif: 'Proxima Nova Semibold', 'Helvetica Neue', Helvetia, Arial, sans-serif;
 $bold-sans-serif: 'Proxima Nova Bold', 'Helvetica Neue', Helvetia, Arial, sans-serif;
 
+
+
+//custom fonts
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?fqdfp5');
+  src:  url('fonts/icomoon.eot?fqdfp5#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?fqdfp5') format('truetype'),
+    url('fonts/icomoon.woff?fqdfp5') format('woff'),
+    url('fonts/icomoon.svg?fqdfp5#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+.icon-download_arrow_final:before {
+  content: "\e900";
+  top: 3px;
+  position: relative;
+  font-size: 19px;
+
+}
+
+
+
+
 // Theme Specific Fonts
 
 // Container Widths
