--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -20,4 +20,5 @@
 @import "layouts/footer";
 @import "layouts/pages";
 @import "layouts/posts";
+@import "layouts/tablepress";
 @import "layouts/tinymce";
