--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -2,6 +2,25 @@
 // Global Styles
 //
 // 0up
+
+
+
+h3,
+.h3 {
+    font-family: $semibold-sans-serif;
+}
+
+h4,
+.h4 {
+    font-family: $semibold-sans-serif;
+}
+
+h5,
+.h5 {
+    font-family: $semibold-sans-serif;
+}
+
+
 body {
     font-family: $sans-serif;
     font-weight: 400;
