--- a/assets/styles/layouts/_tablepress.scss
+++ b/assets/styles/layouts/_tablepress.scss
@@ -13,3 +13,9 @@
 #tablepress-1 > tbody > tr.row-24 > td.column-1 {
 	vertical-align: middle !important;
 }
+
+//2
+
+#tablepress-2 > thead > tr > th.column-1 {
+	width: 33% !important;
+}
