--- a/assets/styles/common/_fonts.scss
+++ b/assets/styles/common/_fonts.scss
@@ -68,3 +68,47 @@ p {
   -o-font-feature-settings: "liga", "dlig";
   font-feature-settings: "liga", "dlig";
 }
+
+//custom icomoon icons using SVG graphics
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?5e3otb');
+  src:  url('fonts/icomoon.eot?5e3otb#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?5e3otb') format('truetype'),
+    url('fonts/icomoon.woff?5e3otb') format('woff'),
+    url('fonts/icomoon.svg?5e3otb#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-HRPCN_Calendar_icon:before {
+  content: "\e900";
+  color: #fff;
+}
+.icon-HRPCN_Fingerprinting_icon:before {
+  content: "\e901";
+  color: #fff;
+}
+.icon-HRPCN_Paperwork_icon:before {
+  content: "\e902";
+  color: #fff;
+}
+.icon-HRPCN_TimeAttendance_icon:before {
+  content: "\e903";
+  color: #fff;
+}
