--- a/assets/styles/components/_slider.scss
+++ b/assets/styles/components/_slider.scss
@@ -20,8 +20,8 @@
             }
             .slick-dots {
                 position: absolute;
-                top: 89%;
-                left: 77.5%; // jumbo 70.5%;
+                bottom: 5%;
+                right: 2%; // jumbo 70.5%;
                 li {
                     list-style: none;
                     display: inline-block;
@@ -46,13 +46,13 @@
                     top: 0;
                     height: 100%;
                     width: 100%;
-                    background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+                    //background: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
                     /* FF3.6-15 */
-                    background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+                    //background: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
                     /* Chrome10-25,Safari5.1-6 */
-                    background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
+                    //background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
                     /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-                    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000', GradientType=0);
+                    //filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000', GradientType=0);
                     /* IE6-9 */
                     .overlay-container {
                         margin-left: auto;
