--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,56 +1,68 @@
 //
 // Footer Styles
 //
-
 // 0up
 footer {
-    background: $dark-blue;
-    color: $white;
-    min-height: 315px;
-    font-size: 18px;
-    .widget {
-        margin-left: auto;
-        margin-right: auto;
-        padding: 0 50px;
-        width: 1280px;
-        .logo {
-            margin-top: 50px;
-            margin-bottom: 15px;
-            height: 50px;
-        }
-        .phone {
-            a {
-                font-family: $sans-serif;
-                color: $white;
-            }
-        }
-        .fax {
-            span {
-                font-family: $sans-serif;
-            }
-        }
-        p {
-            margin: 0;
-        }
-        a {
-            color: $white;
-        }
-        .copyright {
-            display: block;
-            text-align: center;
-        }
+  background: $dark-blue;
+  color: $white;
+  min-height: 315px;
+  font-size: 18px;
+  .widget {
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0 50px;
+    width: 1280px;
+    .logo {
+      margin-top: 50px;
+      margin-bottom: 15px;
+      height: 50px;
     }
+    .phone {
+           font-size: 16px;
+      a {
+        font-family: $sans-serif;
+        color: $white;
+        font-size: 16px;
+      }
+    }
+    .fax {
+           font-size: 16px;
+      span {
+        font-family: $sans-serif;
+        font-size: 16px;
+      }
+    }
+    .email {
+           font-size: 16px;
+      a {
+        font-family: $sans-serif;
+        font-size: 16px;
+      }
+    }
+    p {
+      margin: 0;
+    }
+    a {
+      color: $white;
+    }
+    .copyright {
+      display: block;
+      text-align: center;
+      font-size: 14px;
+      color: #c7c7c7;
+    }
+  }
 }
 
 
 // Extra Small Devices, Phones
-@media only screen and (min-width : $extra-small-container-width) {}
+@media only screen and (min-width: $extra-small-container-width) {}
 
 // Small Devices, Tablets
-@media only screen and (min-width : $small-container-width) {}
+@media only screen and (min-width: $small-container-width) {}
 
 // Medium Devices, Desktops
-@media only screen and (min-width : $medium-container-width) {}
+@media only screen and (min-width: $medium-container-width) {}
 
 // Large Devices, Wide Screens
-@media only screen and (min-width : $large-container-width) {}
+@media only screen and (min-width: $large-container-width) {}
