--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -3,146 +3,187 @@
 //
 // Styles for 0up
 .home {
-    &.page-parent {
-        .content-wrapper {
-            margin-left: auto;
-            margin-right: auto;
-            padding: 35px;
-            min-height: 650px;
-            background-color: $white;
-        }
-        .container-fluid {
-            padding: 0;
-            .content {
-                &.row {
-                    margin-left: auto;
-                    margin-right: auto;
-                    width: 100%;
-                    .main {
-                        .home-content {
-                            .content-wrapper {
-                                .col-md-8,
-                                .col-md-4 {
-                                    padding: 30px;
-                                }
-                            }
-                        }
-                        .quick-links {
-                            background-color: $dark-gray;
-                            height: auto;
-                            min-height: 300px;
-                            padding: 40px 0;
-                            z-index: 900;
-                            .page-container {
-                                margin-left: auto;
-                                margin-right: auto;
-                                height: 100%;
-                                width: 1280px;
-                                display: block;
-                                div {
-                                    font-size: 16px;
-                                    color: $white;
-                                    padding: 10px 50px;
-                                    .quick-link-icon {
-                                        font-size: 50px;
-                                        padding-bottom: 20px;
-                                    }
-                                    p {
-                                        padding-bottom: 20px;
-                                    }
-                                    a {
-                                        color: $light-blue;
-                                        margin-bottom: 20px;
-                                    }
-                                }
-                            }
-                        }
-                        .quick-links:after {
-                            position: absolute;
-                            bottom: 645px;
-                            left: 48%;
-                            content: '\25A0';
-                            transform: rotate(45deg);
-                            font-size: 125px;
-                            color: $dark-gray;
-                        }
-                    }
-                }
-            }
-        }
+  &.page-parent {
+    .content-wrapper {
+      margin-left: auto;
+      margin-right: auto;
+      padding: 35px;
+      min-height: 650px;
+      background-color: $white;
     }
+    .container-fluid {
+      padding: 0;
+      .content {
+        &.row {
+          margin-left: auto;
+          margin-right: auto;
+          width: 100%;
+          .main {
+            .home-content {
+              .content-wrapper {
+                .col-md-8,
+                .col-md-4 {
+                  padding: 30px;
+                }
+              }
+            }
+            .quick-links {
+              background-color: $dark-gray;
+              height: auto;
+              min-height: 220px;
+              padding: 40px 0;
+              z-index: 900;
+              .page-container {
+                margin-left: auto;
+                margin-right: auto;
+                height: 100%;
+                width: 1280px;
+                display: block;
+                div {
+                  font-size: 16px;
+                  color: $white;
+                  padding: 10px 50px;
+                  .quick-link-icon {
+                    font-size: 65px;
+                    padding-bottom: 20px;
+                  }
+
+                  a {
+                    color: $light-blue;
+                    margin-bottom: 20px;
+                  }
+                }
+              }
+            }
+            .quick-links:after {
+              position: absolute;
+              bottom: 644px;
+              left: 48%;
+              content: '\25A0';
+              transform: rotate(45deg);
+              font-size: 125px;
+              color: $dark-gray;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+.center-block:hover {
+  .page-container {
+    div {
+      color: #ffe800;
+    }
+  }
 }
 
 .page-template,
 .page-child,
 .page-parent {
-    background-image: url('../images/bg-optimists-takeover.png'), linear-gradient(#003d6e 100px, #1d6092 300px);
-    background-repeat: no-repeat;
-    background-position: top left;
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: $dark-blue;
-    &.wp-editor {
-        background-image: none;
-        background-color: $white;
+  background-image: url('../images/bg-optimists-takeover.png'), linear-gradient(#003d6e 100px, #1d6092 300px);
+  background-repeat: no-repeat;
+  background-position: top left;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: $dark-blue;
+  &.wp-editor {
+    background-image: none;
+    background-color: $white;
+  }
+  .container-fluid {
+    padding: 0;
+  }
+  .page-header {
+    margin: 0;
+    padding-left: 80px;
+    padding-top: 35px;
+    min-height: 140px;
+    background: $darker-blue;
+    color: $white;
+    h1 {
+      font-family: $sans-serif;
+      font-weight: 400;
+      font-size: 40px;
+      line-height: 106px;
     }
-    .container-fluid {
-        padding: 0;
-    }
-    .page-header {
-        margin: 0;
-        padding-left: 80px;
-        padding-top: 35px;
-        min-height: 140px;
-        background: $darker-blue;
-        color: $white;
-        h1 {
-            font-family: $sans-serif;
-            font-weight: 400;
-            font-size: 40px;
-            line-height: 106px;
-        }
-    }
-    .wrap {
-        .main {
-            padding-left: 0;
-            padding-right: 0;
-            .content-wrapper {
-                padding-left: 35px;
-                padding-right: 35px;
-                .col-md-8,
-                .col-md-4 {
-                    padding: 30px;
-                    section {
-                        margin-bottom: 40px;
-                        h2:after {
-                            content: "";
-                        }
-                    }
-                }
+  }
+  .wrap {
+    .main {
+      padding-left: 0;
+      padding-right: 0;
+      .content-wrapper {
+        padding-left: 35px;
+        padding-right: 35px;
+        .col-md-8,
+        .col-md-4 {
+          padding: 30px;
+          section {
+            margin-bottom: 40px;
+            h2:after {
+              content: "";
             }
+          }
         }
+      }
     }
+  }
 }
 
-.content-wrapper, .page-header h1 {
-    margin-left: auto;
-    margin-right: auto;
+//QUicklinks
+.quicklink-content-p {
+  padding: 10px 0px 0px 0px;
+  margin-bottom: 5px !important;
 }
+
+.ql-anchor {
+color: #00a5e5 !important;
+    margin-bottom: 20px;
+}
+
+.quicklink-content-p {
+    color: white;
+}
+
+.quicklink-block-hover {
+    &:hover {
+        .quicklink-content-p,
+        .quick-link-icon:before,
+        .ql-anchor {
+            color: #ffe800 !important;
+        }
+    }
+}
+//end quicklinks
+
+.content-wrapper,
+.page-header h1 {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .content-wrapper {
-    background-color: $white;
-    overflow: hidden;
+  background-color: $white;
+  overflow: hidden;
 }
+
 .page-header {
-    border-bottom: none;
+  border-bottom: none;
 }
 
 .faq-heading {
-    margin: 35px 0px 15px;
-    font-weight: 600;
-    font-family: $semibold-sans-serif;
+  margin: 35px 0px 15px;
+  font-weight: 600;
+  font-family: $semibold-sans-serif;
 }
 
+//homepage 12-col-md
+
+.padding-30px {
+    padding: 30px;
+}
 
 // Extra Small Devices, Phones
 @media only screen and (min-width: $extra-small-container-width) {}
@@ -152,37 +193,39 @@
 
 // Medium Devices, Desktops
 @media only screen and (min-width: $medium-container-width) {
-    .container {
-        width: 100%;
-    }
-    .content-wrapper, .page-header h1{
+  .container {
+    width: 100%;
+  }
+  .content-wrapper,
+  .page-header h1 {
+    width: $medium-container-width;
+  }
+  .home {
+    &.page-parent {
+      .content-wrapper {
         width: $medium-container-width;
+      }
     }
-    .home {
-        &.page-parent {
-            .content-wrapper {
-                width: $medium-container-width;
-            }
-        }
-    }
+  }
 }
 
 // Large Devices, Wide Screens
 @media only screen and (min-width: $large-container-width) {
-    .home {
-        &.page-parent {
-            .content-wrapper {
-                width: $large-container-width;
-            }
-        }
-    }
-    .page-child {
-        .page-header {
-            padding-top: 35px;
-            min-height: 140px;
-        }
-    }
-    .content-wrapper, .page-header h1 {
+  .home {
+    &.page-parent {
+      .content-wrapper {
         width: $large-container-width;
+      }
     }
+  }
+  .page-child {
+    .page-header {
+      padding-top: 35px;
+      min-height: 140px;
+    }
+  }
+  .content-wrapper,
+  .page-header h1 {
+    width: $large-container-width;
+  }
 }
