--- a/assets/styles/_layouts/_footer.scss
+++ b/assets/styles/_layouts/_footer.scss
@@ -11,7 +11,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     padding: 0 50px;
-    width: 1280px;
+    max-width: 1280px;
     .logo {
       margin-top: 50px;
       margin-bottom: 15px;
