--- a/assets/styles/_layouts/_pages.scss
+++ b/assets/styles/_layouts/_pages.scss
@@ -37,7 +37,7 @@
                 margin-left: auto;
                 margin-right: auto;
                 height: 100%;
-                width: 1280px;
+                max-width: 1280px;
                 display: block;
                 div {
                   font-size: 16px;
